feat: Support for cascading from external instance